--- a/2004_Exam.md
+++ b/2004_Exam.md
@@ -1,1 +1,29 @@
+# MTRX3700 2004 Exam
 
+## Question 2
+
+### Part (a)
+
+Write assembly-language code to initialise Port B and the SPI circuitry for interfacing with the digital potentiometer chip.
+
+#### Solution
+
+The setup is placed inside a subroutine called `SetupForSpi` that is to be called from elsewhere in the program.
+
+It is assumed that p18f452.inc and configReg.inc have been included at the beginning of the project.
+
+```nasm
+SetupForSpi:
+
+  bsf SSPSTAT, CKE  ; tx data on rising edge of SCK
+  
+  bcf TRISC, RC3  ; configure SCK pin as an output
+  bcf TRISC, RC5  ; configure SDO pin as an output
+  clrf  LATB  ; initialise Port B by clearing the output data latches
+  bcf TRISB, RB3  ; configure RB3 pin as an output (ties to #CS on potentiometer)
+
+  movlw 0x20  ; configuration for SSPCON1 that sets up SPI as: enables serial port and configures SCK and SDO, 
+  movwf SSPCON1 ; set the clock idle state as low, spi master mode with FOSC/4 as the input clock, no collision
+
+  return
+```
