--- a/2004_Exam.md
+++ b/2004_Exam.md
@@ -27,3 +27,10 @@ SetupForSpi:
 
   return
 ```
+
+---
+### Part (b)
+
+Write an assembly language subroutine **vSetPotBw** that sets the resistance between potentiometer terminals **B** and **W** (wiper) to **N**% of the potentiometer's value. The argument **N** must be an 8-bit unsigned number that is placed in the microcontroller's **W** register before the subroutine is called. Write an assembly language code fragment that calls the subroutine and sets the B-W resistance value to 720 Ω.
+
+#### Solution
